Add header to form

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
 </head>
 <body>
 
+  <section class=contact>
+    <div>
+      <header class="island-1-2">
+        <h1 class="pad-t-1-2 pad-b-1-2 push-0 zetta">Apply to be a tree planter</h1>
+        <p class="mega">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
+      </header>
+
+    </div>
+
+  </section>
+
 </body>
 </html>
