--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
         <p class="mega">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
       </header>
 
+      <form class="push-0 gutter-1-2" action="..." method="post">
+
+        <fieldset class="push-0 pad-t-1-2 pad-b">
+          <legend class="giga pad-t-2 pad-b">Personal details</legend>
+
+          <div class="grid">
+            <div class="name unit xs-1 m-1-2 l-1-2 xl-1-2 push">
+
+            </div>
+
+          </div>
+
+        </fieldset>
+      </form>
+
     </div>
 
   </section>
