--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 
           <div class="grid">
             <div class="name unit xs-1 m-1-2 l-1-2 xl-1-2 push">
+              <label class="push-1-8" for="name">Full name</label>
+              <input id="name" class="push-1-8" required>
+              <p class="italic micro push-0">Your full legal name, for insurance purposes, e.g. "Elizabeth Bradley"</p>
+            </div>
 
+            <div class="nickname unit xs-1 m-1-2 l-1-2 xl-1-2 push">
+              <label class="push-1-8" for="nick-name">What should we call you?</label>
+              <input id="nick-name" class="push-1-8" required>
+              <p class=micro italic push-0>What all your friends call you, e.g. "Lizz".</p>
             </div>
 
           </div>
