--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
               <p class=micro italic push-0>What all your friends call you, e.g. "Lizz".</p>
             </div>
 
+            <div class="date unit xs-1 m-1-2 l-1-2 xl-1-2 push">
+              <label class="push-1-8" for="birthday">Date of birth</label>
+              <input id="birthday" type="date" required>
+            </div>
+
+            <div class="subject unit xs-1 m-1-2 l-1-2 xl-1-2 push">
+              <label class="push-1-8" for="subject">T-shirt size</label>
+              <select id="subject" name="subject" required>
+                <option value="">Select a t-shirt size</option>
+                <option value="">Fitted: XS</option>
+                <option value="">Fitted: S</option>
+                <option value="">Fitted: M</option>
+                <option value="">Fitted: L</option>
+                <option value="">Fitted: XL</option>
+                <option value="">Straight-cut: XS</option>
+                <option value="">Straight-cut: S</option>
+                <option value="">Straight-cut: M</option>
+                <option value="">Straight-cut: L</option>
+                <option value="">Straight-cut: XL</option>
+              </select>
+            </div>
+
           </div>
 
         </fieldset>
