--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
               </select>
             </div>
 
+            <div class="email unit xs-1 s-1 m-1-2 l-1-2 push">
+              <label class="push-1-8" for="email">Email</label>
+              <input type="email" id="email" required>
+            </div>
+
+            <div class="tel unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
+              <label class="push-1-8" for="tel">Phone number (optional)</label>
+              <input type="tel" id="tel">
+            </div>
           </div>
 
         </fieldset>
