--- a/index.html
+++ b/index.html
@@ -69,8 +69,53 @@
               <input type="tel" id="tel">
             </div>
           </div>
-
         </fieldset>
+
+        <hr>
+
+        <fieldset class="push-2">
+          <legend class="giga pad-t pad-b-1-2">Address</legend>
+
+          <div class="grid">
+            <div class="street unit xs-1 m-1-2 l-1-2 xl-1-2 push-0 pad-t pad-b-1-2">
+              <label class="push-1-8 pad-t-1-8" for="street">Street address</label>
+              <input id="street"required>
+            </div>
+
+            <div class="city unit xs-1 m-1-2 l-1-2 xl-1-2 push-0 pad-t pad-b-1-2">
+              <label class="push-1-8 pad-t-1-8" for="city">City</label>
+              <input id="city"required>
+            </div>
+
+            <div class="region unit xs-1 m-1-2 l-1-2 xl-1-2 push-0 pad-t pad-b-1-2">
+              <label class="push-1-8" for="region">Province</label>
+              <select id="region" name="province" required>
+                <option value="">Select a province</option>
+                <option value="">Alberta</option>
+                <option value="">British Columbia</option>
+                <option value="">Manitoba</option>
+                <option value="">New Brunswick</option>
+                <option value="">Newfoundland & Labrador</option>
+                <option value="">Northwest Territories</option>
+                <option value="">Nova Scotia</option>
+                <option value="">Nunavut</option>
+                <option value="">Ontario</option>
+                <option value="">Prince Edward Island</option>
+                <option value="">Québec</option>
+                <option value="">Saskatchewan</option>
+                <option value="">Yukon</option>
+              </select>
+            </div>
+
+            <div class="postal unit xs-1 s-1 m-1-2 l-1-2 push-0 pad-t pad-b">
+              <label class="push-1-8" for="postal">Postal code</label>
+              <input id="postal" required>
+            </div>
+          </div>
+        </fieldset>
+
+        <hr>
+
       </form>
 
     </div>
