--- a/index.html
+++ b/index.html
@@ -116,6 +116,52 @@
 
         <hr>
 
+        <fieldset class="push-0 pad-t-1-2 pad-b">
+          <legend class="giga pad-t pad-b-1-4 push-0">What activities are you interested in helping with?</legend>
+
+          <div class="grid">
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="hole">
+              <label for="hole">Digging holes</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="dirty">
+              <label for="hole">Getting dirty</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="lifting">
+              <label for="hole">Lifting heavy objects</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="driving">
+              <label for="hole">Driving people objects</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="trees">
+              <label for="hole">Transporting trees</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="photos">
+              <label for="hole">Taking photos</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="publishing">
+              <label for="hole">Online publishing</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="managing">
+              <label for="hole">Managing people</label>
+            </div>
+          </div>
+        </fieldset>
+
       </form>
 
     </div>
