--- a/index.html
+++ b/index.html
@@ -127,40 +127,101 @@
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="dirty">
-              <label for="hole">Getting dirty</label>
+              <label for="dirty">Getting dirty</label>
             </div>
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="lifting">
-              <label for="hole">Lifting heavy objects</label>
+              <label for="lifting">Lifting heavy objects</label>
             </div>
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="driving">
-              <label for="hole">Driving people objects</label>
+              <label for="driving">Driving people objects</label>
             </div>
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="trees">
-              <label for="hole">Transporting trees</label>
+              <label for="trees">Transporting trees</label>
             </div>
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="photos">
-              <label for="hole">Taking photos</label>
+              <label for="photos">Taking photos</label>
             </div>
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="publishing">
-              <label for="hole">Online publishing</label>
+              <label for="publishing">Online publishing</label>
             </div>
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="managing">
-              <label for="hole">Managing people</label>
+              <label for="managing">Managing people</label>
             </div>
           </div>
         </fieldset>
+
+        <fieldset class="push-2">
+          <legend class="giga pad-t pad-b-1-4 push-0">Do you have any experience with the following?</legend>
+
+          <div class="grid">
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="shovel">
+              <label for="shovel">Shovels</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="gps">
+              <label for="gps">Hand-helpd GPS</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="blogging">
+              <label for="blogging">Writing & blogging</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="camera">
+              <label for="camera">Photography</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="trails">
+              <label for="trails">Trail & hill climbing</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="craft">
+              <label for="craft">Bush craft</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="atv">
+              <label for="atv">ATVs</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="plant">
+              <label for="plant">Plant indentification</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="planning">
+              <label for="planning">Special event planning</label>
+            </div>
+
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
+              <input type="checkbox" name="activity" id="speaking">
+              <label for="speaking">Speaking to groups</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <hr>
+
+
+
 
       </form>
 
