Fix spelling error

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
               <input type="checkbox" name="activity" id="gps">
-              <label for="gps">Hand-helpd GPS</label>
+              <label for="gps">Hand-held GPS</label>
             </div>
 
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-4">
