Add fieldset for license

--- a/index.html
+++ b/index.html
@@ -220,6 +220,19 @@
 
         <hr>
 
+        <fieldset class=push-0>
+          <legend class="giga pad-t pad-b-4">Do you have a valid driver's license?</legend>
+
+          <div class="grid">
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+              <input type="radio" name="license" id="yes">
+              <label class="push-r" for="yes">Yes</label>
+              <input type="radio" name="license" id="no">
+              <label class="push-r" for="no">No</label>
+            </div>
+          </div>
+        </fieldset>
+
 
 
 
