Add fieldset for pick up truck

--- a/index.html
+++ b/index.html
@@ -233,6 +233,19 @@
           </div>
         </fieldset>
 
+        <fieldset class=push-0>
+          <legend class="giga pad-t pad-b-4">Do you have a pick-up truck you'd be willing to use?</legend>
+
+          <div class="grid">
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+              <input type="radio" name="truck" id="yes">
+              <label class="push-r" for="yes">Yes</label>
+              <input type="radio" name="truck" id="no">
+              <label class="push-r" for="no">No</label>
+            </div>
+          </div>
+        </fieldset>
+
 
 
 
