--- a/index.html
+++ b/index.html
@@ -246,6 +246,31 @@
           </div>
         </fieldset>
 
+        <fieldset class=push-0>
+          <legend class="giga pad-t pad-b-4">Do you have up-to-date first-aid certification?</legend>
+
+          <div class="grid push-1-8">
+            <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-2">
+              <input type="radio" name="aid" id="yes">
+              <label class="push-r" for="yes">Yes</label>
+              <input type="radio" name="aid" id="no">
+              <label class="push-r" for="no">No</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <hr>
+
+        <fieldset class="push-0">
+          <legend class="giga pad-t pad-b-4">Please let us know any comments or questions you may have (optional)</legend>
+          <div class="push">
+            <label for="details">optional</label>
+            <textarea class="push-2" id="details" name="details" rows="7"></textarea>
+          </div>
+        </fieldset>
+
+        <hr class="push-2">
+
 
 
 
