--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
 
         <hr class="push-2">
 
-
-
-
+        <div class="push-2 unit-content-center">
+          <button class="btn btn-light giga gutter-2" type="submit">Apply</button>
+        </div>
       </form>
 
     </div>
