Add footer in index.html

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
         </div>
       </form>
 
+      <footer class="pad-t pad-b gutter-1-2">© Tree Hugger International Organization</footer>
     </div>
-
   </section>
 
 </body>
