Fix spacing mistakes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="nickname unit xs-1 m-1-2 l-1-2 xl-1-2 push">
               <label class="push-1-8" for="nick-name">What should we call you?</label>
               <input id="nick-name" class="push-1-8" required>
-              <p class=micro italic push-0>What all your friends call you, e.g. "Lizz".</p>
+              <p class="micro italic push-0">What all your friends call you, e.g. "Liz".</p>
             </div>
 
             <div class="date unit xs-1 m-1-2 l-1-2 xl-1-2 push">
@@ -79,12 +79,12 @@
           <div class="grid">
             <div class="street unit xs-1 m-1-2 l-1-2 xl-1-2 push-0 pad-t pad-b-1-2">
               <label class="push-1-8 pad-t-1-8" for="street">Street address</label>
-              <input id="street"required>
+              <input id="street" required>
             </div>
 
             <div class="city unit xs-1 m-1-2 l-1-2 xl-1-2 push-0 pad-t pad-b-1-2">
               <label class="push-1-8 pad-t-1-8" for="city">City</label>
-              <input id="city"required>
+              <input id="city" required>
             </div>
 
             <div class="region unit xs-1 m-1-2 l-1-2 xl-1-2 push-0 pad-t pad-b-1-2">
@@ -238,10 +238,10 @@
 
           <div class="grid">
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <input type="radio" name="truck" id="yes">
+              <input type="radio" name="truck" id="y">
               <label class="push-r" for="yes">Yes</label>
               <input type="radio" name="truck" id="no">
-              <label class="push-r" for="no">No</label>
+              <label class="push-r" for="n">No</label>
             </div>
           </div>
         </fieldset>
@@ -252,9 +252,9 @@
           <div class="grid push-1-8">
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-2">
               <input type="radio" name="aid" id="yes">
-              <label class="push-r" for="yes">Yes</label>
+              <label class="push-r" for="yay">Yes</label>
               <input type="radio" name="aid" id="no">
-              <label class="push-r" for="no">No</label>
+              <label class="push-r" for="nay">No</label>
             </div>
           </div>
         </fieldset>
