--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <section class=contact>
+  <section class="contact">
     <div>
       <header class="island-1-2">
         <h1 class="pad-t-1-2 pad-b-1-2 push-0 zetta">Apply to be a tree planter</h1>
@@ -34,7 +34,7 @@
             <div class="nickname unit xs-1 m-1-2 l-1-2 xl-1-2 push">
               <label class="push-1-8" for="nick-name">What should we call you?</label>
               <input id="nick-name" class="push-1-8" required>
-              <p class="micro italic push-0">What all your friends call you, e.g. "Liz".</p>
+              <p class="micro italic push-0">What all your friends call you, e.g. “Liz”.</p>
             </div>
 
             <div class="date unit xs-1 m-1-2 l-1-2 xl-1-2 push">
@@ -220,7 +220,7 @@
 
         <hr>
 
-        <fieldset class=push-0>
+        <fieldset class="push-0">
           <legend class="giga pad-t pad-b-4">Do you have a valid driver's license?</legend>
 
           <div class="grid">
@@ -233,27 +233,27 @@
           </div>
         </fieldset>
 
-        <fieldset class=push-0>
+        <fieldset class="push-0">
           <legend class="giga pad-t pad-b-4">Do you have a pick-up truck you'd be willing to use?</legend>
 
           <div class="grid">
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <input type="radio" name="truck" id="y">
-              <label class="push-r" for="yes">Yes</label>
-              <input type="radio" name="truck" id="no">
-              <label class="push-r" for="n">No</label>
+              <input type="radio" name="truck" id="yy">
+              <label class="push-r" for="yy">Yes</label>
+              <input type="radio" name="truck" id="nn">
+              <label class="push-r" for="nn">No</label>
             </div>
           </div>
         </fieldset>
 
-        <fieldset class=push-0>
+        <fieldset class="push-0">
           <legend class="giga pad-t pad-b-4">Do you have up-to-date first-aid certification?</legend>
 
           <div class="grid push-1-8">
             <div class="activities unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-2">
-              <input type="radio" name="aid" id="yes">
+              <input type="radio" name="aid" id="yay">
               <label class="push-r" for="yay">Yes</label>
-              <input type="radio" name="aid" id="no">
+              <input type="radio" name="aid" id="nay">
               <label class="push-r" for="nay">No</label>
             </div>
           </div>
